# repodiet

./: .gitignore  Cargo.toml  README.md
.github/workflows/: bench.yml  ci.yml  release.yml
benches/: common.rs  database_bench.rs  scanner_bench.rs  search_bench.rs  tree_bench.rs
src/: cli.rs  lib.rs  main.rs
src/input/: keyboard.rs  mod.rs
src/model/: blob.rs  mod.rs  search.rs  tree.rs
src/repository/: database.rs  git_scanner.rs  mod.rs
src/repository/scanner/: db_store.rs  interner.rs  mod.rs  pack.rs  progress.rs  store.rs  tree.rs  types.rs
src/util/: format.rs  mod.rs  path.rs
src/view/: blobs_view.rs  extension_view.rs  mod.rs  search_view.rs  tree_view.rs  ui_fmt.rs
src/viewmodel/: app_viewmodel.rs  blobs_viewmodel.rs  extension_viewmodel.rs  mod.rs  search_viewmodel.rs  selection.rs  tree_viewmodel.rs
tests/: database_tests.rs  e2e_tests.rs  git_scanner_tests.rs  tree_loading_tests.rs
tests/common/: mod.rs
