[package]
name = "repodiet"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
git2 = "0.20"
indicatif = "0.18"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "6"
# For compressed (on-disk) size extraction from pack files
gix-pack = "0.63"
gix-hash = "0.21"
rustc-hash = "2"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.8", features = ["async_tokio"] }

[[bench]]
name = "tree_bench"
harness = false

[[bench]]
name = "database_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "scanner_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
debug = "line-tables-only"
